# public/swagger.json
@@ -2721,6 +2721,30 @@
           }
         }
       }
+    },
+    "/api/roles/getAll": {
+      "get": {
+        "tags": ["Role Controller"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Role"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "tags": []
